<resources>
    <string name="app_name">Geo Weather</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_register_message">Please login or signup to continue using this app</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number_email_address">Mobile Number / Email Address</string>
    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="degree_celsius">%1$s°C</string>
    <string name="location_city_country">%1$s, %2$s</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="time_at_city_country">%1$s\nat %2$s, %3$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="we_need_your_location_to_provide_you_with_relevant_information">We need your location to provide you with relevant information.</string>
    <string name="accept_location_permission">Accept Location Permission</string>

</resources>