<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imgWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/welcome_header" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgWelcome"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:text="Welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWelcome"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_20sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/Theme.GeoWeather.MaterialButton.ZeroInset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="?colorPrimary"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/_10sdp"
            app:strokeColor="@color/sky_blue"
            app:strokeWidth="@dimen/_1sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Theme.GeoWeather.MaterialButton.ZeroInset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/sign_in"
            app:cornerRadius="@dimen/_10sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLoginRegisterMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearButtons"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/login_register_message"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />


</RelativeLayout>